--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -23,8 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.1.3
-  hive: ^1.4.4
+  provider: ^4.3.2+2
+  hive: ^1.4.4+1
   hive_flutter: ^0.3.1
   http: ^0.12.2
 
@@ -35,8 +35,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: ^0.7.0+2
-  build_runner: ^1.10.0
+  hive_generator: ^0.8.2
+  build_runner: ^1.10.7
   
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
