--- a/weather_app/pubspec.yaml
+++ b/weather_app/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   hive: ^1.4.4+1
   hive_flutter: ^0.3.1
   http: ^0.12.2
-
+  dio: ^3.0.10
+  geolocator: ^6.1.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
